Bug 872853 - Move StringToNumberType into jsnum.cpp, now that it's not used anywhere else, and remove jsnuminlines.h.  r=evilpie

--HG--
extra : rebase_source : 000e1257af9987c87893efe9c76b9f3d42e9bbe4